# ShuyuBai.github.io

./: .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
Assignment 01/: buShuyuBai_system_info.docx  buShuyuBai_system_info.html  buShuyuBai_system_info.qmd
_site/: about.html  index.html  search.json
_site/Assignment 01/: buShuyuBai_system_info.docx
_site/site_libs/bootstrap/: bootstrap-18c8961dac1bb7bc2c936b818b967780.min.css
